<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lars.rentafilmapplication.Presentation.FilmDetailActivity">

    <include
        android:id="@+id/toolbar_home"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="4sp"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/film_testtitle" />

        <TextView
            android:id="@+id/releaseYearTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:text="@string/film_testRelease"/>

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:layout_marginTop="14sp">

            <TextView
                android:id="@+id/descriptionTextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/film_testdescription"/>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="3sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/duration_header"/>

            <TextView
                android:id="@+id/lengthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/film_testLength"/>

            <TextView
                android:id="@+id/minuteSuffixTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="79"
                android:textSize="18sp"
                android:text="@string/minute_field_suffix"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6sp">

            <TextView
                android:id="@+id/ratingHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/rating_header"/>

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:textSize="18sp"
                android:text="@string/film_testrating"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30sp">

            <TextView
                android:id="@+id/featuresHeaderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/features_header"/>
            <TextView
                android:id="@+id/featuresTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8sp"
                android:text="@string/film_testfeatures"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
