<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/off_white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_sign_up"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            android:paddingBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register_email"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/register_email"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/input"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/register_password"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:inputType="textPassword"
                android:padding="10dp"
                android:maxLines="1"
                android:textColor="@color/input"/>

        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            android:text="@string/register_button"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>
