<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lars.rentafilmapplication.Presentation.RentalActivity">

    <include
        android:id="@+id/toolbar_home"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:hint="Enter rental id..."
            android:inputType="number"
            android:layout_weight="7"
            />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="0dp"
            android:textColor="@color/colorPrimary"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:layout_weight="2.5"
            android:text="SEARCH"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@id/rentalIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="36sp"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/rental_id_header"/>

            <TextView
                android:id="@+id/rentalDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rental_rental_date_header"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_weight="1">

            <TextView
                android:id="@+id/customerIdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="22sp"
                android:text="@string/rental_customer_id_header"/>

        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/rentalListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>
